day7/실습자료/compiling_error.txt
/csehome/jinkwon21/dev/CPP/day7/실습자료/bone.cpp: In constructor ‘team::team()’:
/csehome/jinkwon21/dev/CPP/day7/실습자료/bone.cpp:32:27: error: expected ‘{’ at end of input
  team(): name(""), code("");
                           ^
/csehome/jinkwon21/dev/CPP/day7/실습자료/bone.cpp: In constructor ‘team::team(std::__cxx11::string, std::__cxx11::string, player, player, player, player, player, player)’:
/csehome/jinkwon21/dev/CPP/day7/실습자료/bone.cpp:34:61: error: cannot convert ‘player’ to ‘player*’ in initialization
  :name(n), code(c), p1(p1),p2(p2),p3(p3),p4(p4),p5(p5),p6(p6){}
                                                             ^
/csehome/jinkwon21/dev/CPP/day7/실습자료/bone.cpp:34:61: error: cannot convert ‘player’ to ‘player*’ in initialization
/csehome/jinkwon21/dev/CPP/day7/실습자료/bone.cpp:34:61: error: cannot convert ‘player’ to ‘player*’ in initialization
/csehome/jinkwon21/dev/CPP/day7/실습자료/bone.cpp:34:61: error: cannot convert ‘player’ to ‘player*’ in initialization
/csehome/jinkwon21/dev/CPP/day7/실습자료/bone.cpp:34:61: error: cannot convert ‘player’ to ‘player*’ in initialization
/csehome/jinkwon21/dev/CPP/day7/실습자료/bone.cpp:34:61: error: cannot convert ‘player’ to ‘player*’ in initialization
/csehome/jinkwon21/dev/CPP/day7/실습자료/bone.cpp: In function ‘std::ostream& operator<<(std::ostream&, const team&)’:
/csehome/jinkwon21/dev/CPP/day7/실습자료/bone.cpp:21:20: error: ‘double team::teamwork’ is private
  double teamwork = 0; //DO NOT MODIFY!
                    ^
/csehome/jinkwon21/dev/CPP/day7/실습자료/bone.cpp:71:27: error: within this context
  os << "teamwork : " << t.teamwork;
                           ^
/csehome/jinkwon21/dev/CPP/day7/실습자료/bone.cpp: In function ‘std::istream& operator>>(std::istream&, player&)’:
/csehome/jinkwon21/dev/CPP/day7/실습자료/bone.cpp:95:2: error: expected ‘;’ before ‘cout’
  cout << "input position : ";
  ^
/csehome/jinkwon21/dev/CPP/day7/실습자료/bone.cpp: In function ‘void calc_teamwork(team&)’:
/csehome/jinkwon21/dev/CPP/day7/실습자료/bone.cpp:21:20: error: ‘double team::teamwork’ is private
  double teamwork = 0; //DO NOT MODIFY!
                    ^
/csehome/jinkwon21/dev/CPP/day7/실습자료/bone.cpp:113:4: error: within this context
  t.teamwork = t.p1->winning_rate + t.p2->winning_rate + t.p3->winning_rate + t.p4->winning_rate + t.p5->winning_rate + t.p6->winning_rate;
    ^
